@@ -1,4 +1,4 @@
-/* $Id: gamesave.h,v 1.4 2004-08-28 23:17:45 schaffner Exp $ */
+/* $Id: gamesave.h,v 1.5 2005-01-24 21:26:24 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -24,7 +24,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 
 void LoadGame(void);
 void SaveGame(void);
-void get_level_name(void);
+int get_level_name(void);
 
 extern int load_level(char *filename);
 extern int save_level(char *filename);
